# yetien-backend-asr-grpc

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  _test_client.py  dev  pyproject.toml  run.py  test.py
.devcontainer/: devcontainer.json
.github/workflows/: push.yaml  release.yaml
docker/: docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-entrypoint  test-in-container.sh
k8s/: deployment.grpc.yaml  deployment.model1.yaml  deployment.model2.yaml  services.model1.yaml  services.model2.yaml
server/: _test_client.py  asrserver.proto  model.py  s3.py  server.py  settings.py  task.py
test/: test_s3.py
